--- a/source/web/public/index.html
+++ b/source/web/public/index.html
@@ -8,6 +8,6 @@
 <body>
     <!-- Tu contenido HTML aquí -->
     
-    <script src="web.js"></script>
+    <script src="./scripts/web.js"></script>
 </body>
 </html>
