--- a/source/web/public/index.html
+++ b/source/web/public/index.html
@@ -6,8 +6,9 @@
     <title>TypeScript Web Project</title>
 </head>
 <body>
-    <!-- Tu contenido HTML aquí -->
-    
+    <h1 class="title">Curso de TypeScript</h1>
+    <label for="message">Escribe algo:</label>
+    <input type="text" id="message" placeholder="Mensaje del usuario"/>
     <script src="./scripts/web.js"></script>
 </body>
 </html>
